@@ -1,5 +1,8 @@
 2010-12-26  Doug Hellmann  <dhellmann@racemi.com>
 
+	* setup.py: Change "requires" to "install_requires" so pip will
+	try to install virtualenv if it is not already there.
+
 	* virtualenvwrapper.sh (virtualenvwrapper_get_python_version): Use
 	python's -V option and cut to get the version instead of a python
 	one-liner.
